[tool.poetry]
name = "champ"
version = "0.1.0"
description = ""
authors = ["ternyavsky <ilya.ternyavsky@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
pydantic = "^2.6.3"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
dependency-injector = "^4.41.0"
qrcode = "^7.4.2"
imgix = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
